# DRON

./: .gitignore  LICENSE.md  README.md  grayscale.py  hotspot_detect.py
Automation/: .README.md.swp  CMakeLists.txt  README.md  offboard_control_square.cpp  offboard_control_square_2.cpp
DRON_Interface/Assets/: PointCloud.vfx  ROS2Manager.cs  Skybox.mat  URP_Asset.asset
DRON_Interface/Assets/Materials/: VertexColor.mat
DRON_Interface/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
DisparityFiltering/: DisparityFiltering.cpp
Stereovision/: cameraCalib.py  captureStereoConfigImages.py  captureStereoImages.py  grayscale.py  stereoCalib.py  stereocalib_params.xml
Stereovision/DisparityFiltering/: CMakeLists.txt  CMakePresets.json  DisparityFiltering.cpp
Stereovision/DisparityFiltering/opencv-contrib/: OpenCVConfig-version.cmake  OpenCVConfig.cmake  setup_vars_opencv4.cmd
Stereovision/DisparityFiltering/opencv-contrib/etc/licenses/: ippicv-third-party-programs.txt  ippiw-support.txt
Stereovision/DisparityFiltering/opencv-contrib/include/opencv2/: opencv_modules.hpp
Stereovision/DisparityFiltering/opencv-contrib/x64/mingw/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
Stereovision/DisparityFiltering/opencv-contrib/x64/vc17/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_img_hash4130.lib
calibration_params/: stereocalib_params.xml
calibration_params/old/: stereocalib_params.xml
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/thermal_cam/share/thermal_cam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/camera/: package.xml  setup.py
ros2_ws/src/camera/camera/: captureStereoImages.py  image_publisher.py
vizstuff/: MeshToPoint.py  Pointcloud_display.py  Q_matrix.yml  disp.yml  image-20-00-03-6_data.npy  image-20-50-25-40_data.npy  image-20-50-25-40_log.txt  image_gird.py  point_cloud.ply  pointcloud_from_png.py  pointcloud_generation.py  stereocalib_params.xml  voxelmaping.py  voxelviz.py
(+112 files in other folders)
