<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thermal_cam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abel@todo.todo">abel</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>cv2</depend>
  <depend>senxor</depend>
  <depend>pyserial</depend>
  <depend>smbus</depend>
  <depend>spidev</depend>
  <depend>numpy</depend>
  <depend>crcmod</depend>
  <depend>matplotlib</depend>
  <depend>cmapy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
